--- a/src/main/java/me/bannock/virus/VirusSetupForm.form
+++ b/src/main/java/me/bannock/virus/VirusSetupForm.form
@@ -151,6 +151,14 @@
               <text value="Image Provider"/>
             </properties>
           </component>
+          <component id="ea09f" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Requires administrator privileges"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
